[package]
name = "mazestepper-multiplayer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
linera-sdk = "0.15.8"
linera-views = "0.15.8"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1
