[package]
name = "mazestepper-multiplayer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
linera-sdk = "0.15.8"
linera-views = "0.15.8"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1

[profile.release.package."*"]
opt-level = "s"

# Force older WASM features to avoid opcode 252
[target.wasm32-unknown-unknown]
rustflags = [
    "-C", "target-feature=-reference-types,-bulk-memory,-mutable-globals"
]
